Modularized boardgame(GridView) and GridAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Android Games</string>
+    <string name="exitFromBoardGame">Quit</string>
+    <string name="currentPlayer">Current Player</string>
+    <string name="winnerPlayer">Winner</string>
+    <string name="emptyChip">empty</string>
+    <string name="redChip">red</string>
+    <string name="blueChip">blue</string>
 </resources>
